# happy-tree

./: .gitignore  README.md  README.txt  imgui.ini
work/: CMakeLists.txt
work/res/: CMakeLists.txt
work/res/assets/: plane.mb
work/res/shaders/: phongShader.frag  phongShader.vert
work/res/textures/.mayaSwatches/: grass.png_hcm.swatch
work/src/: CMakeLists.txt  cgra_geometry.hpp  cgra_math.hpp  fuzzy_object.cpp  fuzzy_object.hpp  geometry.cpp  geometry.hpp  imageLoader.hpp  main.cpp  opengl.hpp  particle_system.cpp  particle_system.hpp  simple_gui.cpp  simple_gui.hpp  simple_image.hpp  simple_shader.hpp  tree.cpp  tree.hpp
